deployment-resume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: resume
 namespace: cmzhu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
      - name: resume
        image: dockerhub.cmzhu.cn:5000/cmzhu/resume:v1 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resume
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: resume
