ingress-resume.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume
  namespace: cmzhu
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: resume.cmzhu.cn
    http:
      paths:
      - backend:
          service:
            name: resume
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - resume.cmzhu.cn
    secretName: resume-tls
